--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.8",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.0",
@@ -40,9 +41,10 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "nanoid": "^3.3.7",
+    "nanoid": "^5.1.5",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.3",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
